test/SemanticAnalysis/Struct/OpaqueStructFunctionReturnType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

struct OpaqueStruct;

// CHECK-NOT: .loci:7:8: error: return type 'OpaqueStruct' of function 'f' does not have a size
import OpaqueStruct f();

// CHECK: .loci:10:8: error: return type 'OpaqueStruct' of function 'g' does not have a size
export OpaqueStruct g() {
	// CHECK: .loci:12:9: error: return type 'OpaqueStruct' of function call does not have a size
	return f();
}

// CHECK: 2 errors generated.
